2011-09-08  Shinya Kawanaka  <shinyak@google.com>

        Crashes in WebCore::ReplaceSelectionCommand::doApply
        https://bugs.webkit.org/show_bug.cgi?id=67762

        Reviewed by Ryosuke Niwa.

        WebCore::enclosingBlock may return null, but its return value was not checked. This patch checks it.

        Tests: editing/inserting/insert-without-enclosing-block.html

        * editing/ReplaceSelectionCommand.cpp:
        (WebCore::ReplaceSelectionCommand::doApply): Added null check.

2011-09-08  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r94784.
        http://trac.webkit.org/changeset/94784
        https://bugs.webkit.org/show_bug.cgi?id=67796

        Commit was premature (Requested by rolandsteiner on #webkit).

        * html/HTMLAttributeNames.in:
        * html/HTMLStyleElement.cpp:
        * html/HTMLStyleElement.h:
        * html/HTMLStyleElement.idl:

2011-09-08  W. James MacLean  <wjmaclean@chromium.org>

        [chromium] Add backend compositor support for rescaling (zooming) textures during zoom animation.
        https://bugs.webkit.org/show_bug.cgi?id=66472

        This patch contains plumbing from Internals to WebViewImpl that can be removed
        at a later time when the zoom animator code is complete.

        Reviewed by James Robinson.

        Test: platform/chromium/compositing/zoom-animator-scale-test.html

        * page/Settings.cpp:
        (WebCore::Settings::Settings):
        * page/Settings.h:
        (WebCore::Settings::setZoomAnimatorScale):
        (WebCore::Settings::zoomAnimatorScale):
        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::LayerRendererChromium):
        (WebCore::LayerRendererChromium::drawLayersInternal):
        * platform/graphics/chromium/LayerRendererChromium.h:
        (WebCore::LayerRendererChromium::setZoomAnimatorScale):
        * platform/graphics/chromium/cc/CCLayerTreeHost.cpp: