@@ -1,3 +1,15 @@
+2011-09-08  Eric Seidel  <eric@webkit.org>
+
+        Remove DocumentWriter::setDecoder as a grep of WebKit shows no callers
+        https://bugs.webkit.org/show_bug.cgi?id=67803
+
+        Reviewed by Adam Barth.
+
+        Smells like dead code.
+
+        * loader/DocumentWriter.cpp:
+        * loader/DocumentWriter.h:
+
 2011-09-08  Shinya Kawanaka  <shinyak@google.com>
 
         Crashes in WebCore::ReplaceSelectionCommand::doApply
